force-app/main/default/objects/Position__c/fields/C_sharp__c.field-meta.xml
<CustomField>
    <fullName>C_sharp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C sharp</label>
    <type>Checkbox</type>
</CustomField>