force-app/main/default/objects/Position__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>The number of days a position has
been (or was) open</description>
    <formula>IF( ISBLANK( Close_Date__c ) ,
TODAY() - Open_Date__c ,
Close_Date__c - Open_Date__c )</formula>
    <inlineHelpText>Help!!</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>