force-app/main/default/objects/Position__c/validationRules/Close_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Rule</fullName>
    <active>true</active>
    <description>Close Date must be specified when
Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved.</description>
    <errorConditionFormula>ISBLANK(Close_Date__c) &amp;&amp;
(ISPICKVAL(Status__c , &quot;Closed - Filled&quot;) ||
ISPICKVAL(Status__c , &quot;Closed - Not Approved&quot;))</errorConditionFormula>
    <errorMessage>r Close Date must be specified when
Status is set to &apos;Closed.&apos;</errorMessage>
</ValidationRule>