force-app/main/default/objects/Position__c/validationRules/Min_Pay_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_Rule</fullName>
    <active>true</active>
    <description>Min Pay should never exceed Max Pay</description>
    <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
    <errorMessage>Min Pay should never exceed Max Pay</errorMessage>
</ValidationRule>